--- a/MVCWEF/Views/Balance/ViewAllOrderWaiting.cshtml
+++ b/MVCWEF/Views/Balance/ViewAllOrderWaiting.cshtml
@@ -20,9 +20,7 @@
     <table class="table">
         <thead>
             <tr class="success">
-                <th>
-                    UserID
-                </th>
+               
                 <th>
                     Name
                 </th>
@@ -34,10 +32,10 @@
                 </th>
 
                 <th>
-                    CustomerPhone
+                    Phone
                 </th>
                 <th>
-                    CustomerAddress
+                    Address
                 </th>
                 <th>
                     Quantity
@@ -54,7 +52,9 @@
                 <th>
                     Image
                 </th>
-
+                <th>
+                    Check Balcnce
+                </th>
 
             </tr>
         </thead>
@@ -62,13 +62,12 @@
         @foreach (var item in Model)
     {
         <tr>
+           
             <td>
-                @Html.DisplayFor(modelItem => item.order.UserID)
+                @Html.DisplayFor(modelItem => item.users.Fname)
+                @Html.DisplayFor(modelItem => item.users.Lname)
             </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.users.Fname + " " + item.users.Lname)
-            </td>
-            
+
             <td>
                 @Html.DisplayFor(modelItem => item.order.OrderDate)
             </td>
@@ -99,6 +98,10 @@
                 <img src="@Url.Content(item.products.Image)" width="100" height="100" />
             </td>
 
+            <td>
+                @Html.ActionLink("Check", "CheckBalance", "Balance", new {id = item.order.OrderId }, null)
+                <input type="submit" value="Check" />
+            </td>
 
         </tr>
 }
