--- a/MVCWEF/Views/RoleManager/ViewAll.cshtml
+++ b/MVCWEF/Views/RoleManager/ViewAll.cshtml
@@ -42,6 +42,10 @@
             <th>
                 Image
             </th>
+            <th>
+               You Can Block,Charge Balacne And Delete User 
+            </th>
+          
         </tr>
 
         @foreach (var item in Model)
