--- a/MVCWEF/Views/Shared/_MainLayout.cshtml
+++ b/MVCWEF/Views/Shared/_MainLayout.cshtml
@@ -245,7 +245,7 @@
                             </li>
 
                             <li class="sub-menu">
-                                <a href="@Url.Action("Index", "RoleManager")">
+                                <a href="@Url.Action("IndexAdmin", "RoleManager")">
                                     <i class="fa fa-desktop"></i>
                                     <span>Role</span>
                                 </a>
